--- a/assets/style/modules/_product.scss
+++ b/assets/style/modules/_product.scss
@@ -5,7 +5,8 @@
 	margin-bottom: 30px;
 
 	&__img {
-		height: 254px;
+		// height: 254px;
+		height: 220px;
 		img {
 			width: 100%;
 			height: 100%;
@@ -13,12 +14,15 @@
 	}
 	&__title {
 		margin: 15px 0;
+		color: $title-color;
+		line-height: 22px;
 	}
 
 	&__add-to-cart-btn {
-		border-radius: 0;
+		float: right;
+
 		text-transform: capitalize;
-		font-size: 13px;
+		font-size: 11px;
 		font-weight: bold;
 		background: #8224e3;
 		border-color: #8224e3;
@@ -30,6 +34,9 @@
 	}
 
 	&__price {
-		float: right;
+		// float: right;
+		font-weight: bold;
+		color: #000;
+		// color: #666;
 	}
 }
