--- a/assets/style/modules/_top-bar.scss
+++ b/assets/style/modules/_top-bar.scss
@@ -1,7 +1,16 @@
 #top-bar {
 	background: #fff;
 	#logo {
-		padding: 15px;
+		padding: 0;
+		// height: 50px;
+		// width: 97px;
+		height: 65px;
+		width: 109px;
+
+		img {
+			width: 100%;
+			height: 100%;
+		}
 	}
 
 	.right-wrapper {
@@ -16,7 +25,7 @@
 
 			a {
 				display: inline-block;
-				padding: 15px;
+				padding: 0 15px;
 				text-transform: capitalize;
 				// font-weight: bold;
 				color: $title-color;
