--- a/assets/style/_base.scss
+++ b/assets/style/_base.scss
@@ -13,7 +13,7 @@
 
 body {
 	color: $body-color;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Lato', sans-serif;
 	overflow-wrap: break-word;
 }
 
