--- a/assets/style/layout/_header.scss
+++ b/assets/style/layout/_header.scss
@@ -14,8 +14,8 @@ $header-height: 500px;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background: #786ea4;
-		opacity: 0.3;
+		background: rgba(109, 115, 253, 0.24);
+		// opacity: 0.7;
 	}
 
 	#media-bg-wrapper {
@@ -36,12 +36,21 @@ $header-height: 500px;
 
 	#header-content {
 		position: absolute;
-		top: 56%;
+		top: 63%;
 		left: 50%;
 		transform: translate(-50%, -50%);
 		color: #fff;
 		max-width: 600px;
 		margin: auto;
 		text-align: center;
+
+		button {
+			margin-top: 15px;
+			border-width: 2px;
+			padding: 4px 16px;
+			font-size: 15px;
+			font-weight: bold;
+			text-transform: uppercase;
+		}
 	}
 }
