--- a/assets/style/modules/_top-bar.scss
+++ b/assets/style/modules/_top-bar.scss
@@ -1,8 +1,9 @@
 #top-bar {
-	padding: 0 0 10px;
+	padding: 0;
 	background: #fff;
+
 	#news {
-		margin-bottom: 10px;
+		// margin-bottom: 20px;
 		padding: 12px 0;
 		font-size: 12px;
 		font-weight: 700;
@@ -13,38 +14,13 @@
 		text-align: center;
 	}
 
-	#logo {
-		padding: 0;
-		height: 62px;
-		width: 109px;
-
-		img {
-			width: 100%;
-			height: 100%;
-		}
+	.nav-item {
+		color: $title-color;
 	}
-
-	.right-wrapper {
-		text-align: right;
-
-		.form-inline {
-			display: inline-block;
-		}
-
-		#main-nav {
-			display: inline-block;
-
-			a {
-				display: inline-block;
-				padding: 0 15px;
-				text-transform: capitalize;
-				// font-weight: bold;
-				color: $title-color;
-				text-decoration: none;
-				&:hover {
-					color: #aaa;
-				}
-			}
+	.navbar-brand {
+		img {
+			height: 62px;
+			width: 109px;
 		}
 	}
 }
