--- a/assets/style/layout/_footer.scss
+++ b/assets/style/layout/_footer.scss
@@ -4,9 +4,9 @@
 	}
 	.bottom-footer {
 		background: #353535;
-		padding: 15px 0;
+		padding: 10px 0;
 		p {
-			margin-bottom: 0;
+			margin: 7px 0;
 		}
 	}
 }
