--- a/assets/style/modules/_payment-icon.scss
+++ b/assets/style/modules/_payment-icon.scss
@@ -1,22 +1,30 @@
-.payment-icon {
-	display: inline-block;
-	opacity: 0.6;
-	transition: opacity 0.3s;
-	border-radius: 5px;
-	padding-bottom: 0;
-	padding: 3px 5px 5px;
-	margin: 3px 3px 0;
-	width: 50px;
-	background-color: rgba(255, 255, 255, 0.1);
-	&:hover {
-		opacity: 1;
-		cursor: pointer;
+.payment-icons-wrapper {
+	margin: 7px 0;
+	text-align: left;
+	@media (min-width: 768px) {
+		text-align: right;
 	}
 
-	svg {
-		vertical-align: middle;
-		height: 20px;
-		width: auto !important;
-		fill: #fff !important;
+	.payment-icon {
+		display: inline-block;
+		opacity: 0.6;
+		transition: opacity 0.3s;
+		border-radius: 5px;
+		padding-bottom: 0;
+		padding: 3px 5px 5px;
+		margin: 3px 3px 0;
+		width: 50px;
+		background-color: rgba(255, 255, 255, 0.1);
+		&:hover {
+			opacity: 1;
+			cursor: pointer;
+		}
+
+		svg {
+			vertical-align: middle;
+			height: 20px;
+			width: auto !important;
+			fill: #fff !important;
+		}
 	}
 }
