--- a/templates/includes/header.pug
+++ b/templates/includes/header.pug
@@ -19,10 +19,10 @@ html(lang='en')
 				#navbarNav.collapse.navbar-collapse.w-100.order-3.dual-collapse2
 					ul.navbar-nav.text-center.ml-auto
 						li.nav-item.active
-							a.nav-link(href='#')
-								| Home 
-								span.sr-only (current)
+							a.nav-link(href='#') shop 
 						li.nav-item
-							a.nav-link(href='#') Features
+							a.nav-link(href='#') categories
 						li.nav-item
-							a.nav-link(href='#') Pricing
+							a.nav-link(href='#') cart
+						li.nav-item
+							a.nav-link(href='#') contact
