--- a/templates/includes/hero.pug
+++ b/templates/includes/hero.pug
@@ -1,4 +1,4 @@
-header#header
+header#hero
     #media-bg-wrapper
         img.media(src='../assets/images/shop-1-e1462868996184.jpg', alt='')
         //
@@ -9,7 +9,7 @@ header#header
             />
             </video>
 
-    #header-content
+    #hero-content
         span
             h5
                 | Lorem ipsum dolo sit amet, consectetur adipisicing elit, sed do eiusmod tempor
