--- a/templates/includes/header.pug
+++ b/templates/includes/header.pug
@@ -1,6 +1,10 @@
+- var envUrl = process.env.NODE_ENV === 'development' ? '/' : 'https://a-maged.github.io/shopper-theme/'; 
+
+
 doctype html
 html(lang='en')
 	head
+		base(href=envUrl)
 		meta(charset='UTF-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		title Document
@@ -8,6 +12,7 @@ html(lang='en')
 		link(rel='stylesheet', href='../assets/style/index.scss')
 
 	body
+		
 
 		#top-bar
 			#news hurry up before the sale ends!
