--- a/templates/includes/header.pug
+++ b/templates/includes/header.pug
@@ -9,7 +9,7 @@ html(lang='en')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		title Document
 		link(href='https://fonts.googleapis.com/css?family=Lato:400,700&display=swap', rel='stylesheet')
-		link(rel='stylesheet', href='../assets/style/index.scss')
+		link(rel='stylesheet', href='#{envUrl}../assets/style/index.scss')
 
 	body
 		
