--- a/templates/includes/header.pug
+++ b/templates/includes/header.pug
@@ -1,10 +1,10 @@
-- var envUrl = process.env.NODE_ENV === 'development' ? '/' : 'https://a-maged.github.io/shopper-theme/'; 
+//- - var envUrl = process.env.NODE_ENV === 'development' ? '/' : 'https://a-maged.github.io/shopper-theme/'; 
 
 
 doctype html
 html(lang='en')
 	head
-		base(href=envUrl)
+		//- base(href=envUrl)
 		meta(charset='UTF-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		title Document
