--- a/assets/style/layout/_category.scss
+++ b/assets/style/layout/_category.scss
@@ -12,7 +12,7 @@
 
 		.category-info-wrapper {
 			position: relative;
-			height: 400px;
+			min-height: 400px;
 			color: #fff;
 			background-size: cover !important;
 			background-repeat: no-repeat !important;
