--- a/templates/includes/hero.pug
+++ b/templates/includes/hero.pug
@@ -1,6 +1,6 @@
 header#hero
     #media-bg-wrapper
-        img.media(src='../assets/images/shop-1-e1462868996184.jpg', alt='')
+        img.media(src='../assets/images/shop-1-e1462868996184.jpg' alt='')
         //
             <video class="media" autoplay loop muted>
             <source
@@ -10,8 +10,7 @@ header#hero
             </video>
 
     #hero-content
-        span
-            h5
-                | Lorem ipsum dolo sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                | sit amet, consectetur adipisicing elit,sed sit amet, adipisicing elit,sed
-            button.btn.btn-outline-light shop now
+        h5
+            | Lorem ipsum dolo sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            | sit amet, consectetur adipisicing elit,sed sit amet, adipisicing elit,sed
+        button.btn.btn-outline-light shop now
