--- a/assets/style/modules/_hero.scss
+++ b/assets/style/modules/_hero.scss
@@ -14,7 +14,7 @@ $header-height: 380px;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background: rgba(109, 115, 253, 0.24);
+		background: rgba(0, 1, 44, 0.61)
 		// opacity: 0.7;
 	}
 
@@ -41,6 +41,7 @@ $header-height: 380px;
 		transform: translate(-50%, -50%);
 		color: #fff;
 		max-width: 600px;
+		width: 68%;
 		margin: auto;
 		text-align: center;
 
