--- a/assets/style/modules/_product.scss
+++ b/assets/style/modules/_product.scss
@@ -1,7 +1,7 @@
 .product {
-	max-width: 220px;
-	margin-left: auto;
-	margin-right: auto;
+	width: 210px;
+	margin-left: 10px;
+	margin-right: 10px;
 	margin-bottom: 30px;
 
 	&__img {
